; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/worker/extr_worker_shard_visibility.c_ReplaceTableVisibleFunction.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/worker/extr_worker_shard_visibility.c_ReplaceTableVisibleFunction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OverrideTableVisibility = common dso_local global i32 0, align 4
@DEBUG2 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ReplaceTableVisibleFunction(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32, i32* @OverrideTableVisibility, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %12

5:                                                ; preds = %1
  %6 = call i32 (...) @CitusHasBeenLoaded()
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %12

8:                                                ; preds = %5
  %9 = load i32, i32* @DEBUG2, align 4
  %10 = call i32 @CheckCitusVersion(i32 %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %8, %5, %1
  br label %16

13:                                               ; preds = %8
  %14 = load i32*, i32** %2, align 8
  %15 = call i32 @ReplaceTableVisibleFunctionWalker(i32* %14)
  br label %16

16:                                               ; preds = %13, %12
  ret void
}

declare dso_local i32 @CitusHasBeenLoaded(...) #1

declare dso_local i32 @CheckCitusVersion(i32) #1

declare dso_local i32 @ReplaceTableVisibleFunctionWalker(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
